--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <style>
 		#mapid { height: 400px;}
   </style>
-  <div>
+  <!-- <div>
     <a href="./public/pages/form.php">Register New Restaurant</a>
-  </div>
+  </div> -->
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
